# LastMile

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml  dockerfile
.github/: pull_request_template.md
.github/workflows/: ci.yml  rust.yml
scripts/: e2e.py  generate-test-data.ps1  generate-test-data.sh  verify_demo.py
src/: calculations.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  seeding.rs  state.rs  validation.rs
src/db/: helpers.rs  mod.rs
src/handlers/: health.rs  maintenance.rs  mod.rs  shifts.rs  test.rs
static/: api.js  app.js  favicon.ai  index.html  maintenance.js  manifest.json  service-worker.js  styles.css  ui.js  utils.js
tests/: handler.rs  helper.rs
tests/common/: mod.rs
