[package]
name = "lastmile"
version = "0.7.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
http-body = "1.0.1"
rust_decimal = { version = "1.39.0", features = ["serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "2.4.0", features = ["kv-rocksdb"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["compression-gzip", "cors", "fs", "set-header"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
surrealdb = { version = "2.4.0", default-features = false, features = ["kv-mem"] }
rust_decimal_macros = "1.39.0"
