[package]
name = "lastmile"
version = "0.8.6"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie", "cookie-private"] }
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.32"
http-body = "1.0.1"
rand = "0.10.0"
rust_decimal = { version = "1.40.0", features = ["serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "2.6.2", features = ["kv-rocksdb", "kv-mem"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["compression-gzip", "cors", "fs", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
rust_decimal_macros = "1.40.0"
